storagevol: add nocow to vol xml
Add 'nocow' to storage volume xml so that user can have an option
to set NOCOW flag to the newly created volume. It's useful on btrfs
file system to enhance performance.

Btrfs has low performance when hosting VM images, even more when the guest
in those VM are also using btrfs as file system. One way to mitigate this
bad performance is to turn off COW attributes on VM files. Generally, there
are two ways to turn off COW on btrfs: a) by mounting fs with nodatacow,
then all newly created files will be NOCOW. b) per file. Add the NOCOW file
attribute. It could only be done to empty or new files.

This patch tries the second way, according to 'nocow' option, it could set
NOCOW flag per file:
for raw file images, handle 'nocow' in libvirt code; for non-raw file images,
pass 'nocow=on' option to qemu-img, and let qemu-img to handle that (requires
qemu-img version >= 2.1).

Signed-off-by: Chunyan Liu <cyliu@suse.com>

--- a/docs/formatstorage.html.in
+++ b/docs/formatstorage.html.in
@@ -385,6 +385,7 @@
             &lt;label&gt;virt_image_t&lt;/label&gt;
           &lt;/permissions&gt;
           &lt;compat&gt;1.1&lt;/compat&gt;
+          &lt;nocow/&gt;
           &lt;features&gt;
             &lt;lazy_refcounts/&gt;
           &lt;/features&gt;
@@ -423,6 +424,12 @@
         be compatible with. If the <code>feature</code> element is present,
         1.1 is used. If omitted, qemu-img default is used.
         <span class="since">Since 1.1.0</span>
+      </dd>
+      <dt><code>nocow</code></dt>
+      <dd>Turn off COW of the newly created volume. So far, this is only valid
+        for a file image in btrfs file system. It will improve performance when
+        the file image is used in VM. To create non-raw file images, it
+        requires QEMU version since 2.1. <span class="since">Since 1.2.7</span>
       </dd>
       <dt><code>features</code></dt>
       <dd>Format-specific features. Only used for <code>qcow2</code> now.
