--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -1683,7 +1683,8 @@
             defaulting to "disk".
             <p>
             Using "lun" (<span class="since">since 0.9.10</span>) is only
-            valid when type is "block", and behaves identically to "disk",
+            valid when type is "block" or "network" using the iSCSI protocol,
+            and behaves identically to "disk",
             except that generic SCSI commands from the guest are accepted
             and passed through to the physical device. Also note that
             device='lun' will only be recognized for actual raw devices,
