--- a/docs/formatstorage.html.in
+++ b/docs/formatstorage.html.in
@@ -508,8 +508,12 @@
         or directory pools it will provide the file format type, eg cow,
         qcow, vmdk, raw. If omitted when creating a volume, the pool's
         default format will be used. The actual format is specified via
-        the <code>type</code> attribute. Consult the pool-specific docs for
-        the list of valid values. <span class="since">Since 0.4.1</span></dd>
+        the <code>type</code> attribute. Consult the
+        <a href="storage.html">storage driver page</a> for the list of valid
+        volume format type values for each specific pool. The
+        <code>format</code> will be ignored on input for pools without a
+        volume format type value and the default pool format will be used.
+        <span class="since">Since 0.4.1</span></dd>
       <dt><code>permissions</code></dt>
       <dd>Provides information about the default permissions to use
         when creating volumes. This is currently only useful for directory
